# Oggetto

./: .gitignore  Cargo.toml  README.md
src/: block.rs  chunk.rs  constants.rs  error.rs  file.rs  lib.rs  main.rs  operations.rs  redundant_file.rs  volume.rs  volume_manager.rs
src/chunk/: local_chunk.rs
